--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
+    "@types/request": "^2.48.5",
+    "@types/request-promise": "^4.1.46",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "opencage-api-client": "^0.9.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
